--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,62 @@
-# Azure OpenAI Configuration - Copy this file to .env and fill in your values
-AZURE_OPENAI_ENDPOINT=https://your-resource-name.openai.azure.com/
+# Library Advisory System Environment Configuration
+# Copy this file to .env and fill in your values
+
+# Azure OpenAI Configuration
+AZURE_OPENAI_ENDPOINT=https://your-endpoint.openai.azure.com/
 AZURE_OPENAI_API_KEY=your-api-key-here
 AZURE_OPENAI_API_VERSION=2024-02-15-preview
 AZURE_OPENAI_DEPLOYMENT_NAME=GPT-4o-mini
 OPENAI_TEMPERATURE=0.7
 OPENAI_MAX_TOKENS=2000
-DEBUG=false
+
+# ChromaDB Configuration
+CHROMADB_HOST=localhost
+CHROMADB_PORT=8000
+CHROMADB_PERSIST_DIRECTORY=./chromadb_data
+CHROMADB_EMBEDDING_MODEL=all-MiniLM-L6-v2
+CHROMADB_RESET_ON_START=false
+
+# TTS Configuration
+TTS_MODEL=microsoft/speecht5_tts
+TTS_VOCODER=microsoft/speecht5_hifigan
+TTS_CACHE_DIR=./tts_cache
+TTS_MAX_CACHE_SIZE_MB=500
+TTS_MAX_TEXT_LENGTH=1000
+TTS_SAMPLE_RATE=16000
+TTS_ENABLE_CACHING=true
+TTS_DEVICE=auto
+
+# Audio Settings
+ENABLE_AUDIO_RESPONSES=true
+DEFAULT_AUDIO_AUTOPLAY=false
+DEFAULT_AUDIO_VOLUME=0.8
+DEFAULT_AUDIO_PLAYBACK_RATE=1.0
+
+# Flask Configuration
+FLASK_ENV=development
+FLASK_DEBUG=true
+FLASK_HOST=0.0.0.0
+FLASK_PORT=5001
+SECRET_KEY=your-secret-key-here
+
+# Logging Configuration
+LOG_LEVEL=INFO
+LOG_FILE=./logs/library_advisory.log
+ENABLE_FILE_LOGGING=true
+
+# Performance Settings
+MAX_CONCURRENT_TTS_REQUESTS=3
+CHROMADB_QUERY_TIMEOUT=30
+TTS_GENERATION_TIMEOUT=30
+
+# Feature Flags
+ENABLE_CHROMADB=true
+ENABLE_TTS=true
+ENABLE_SEMANTIC_SEARCH=true
+ENABLE_FAQ_MATCHING=true
+ENABLE_USER_QUERY_TRACKING=true
+
+# Cache Settings
+ENABLE_RESPONSE_CACHING=true
+RESPONSE_CACHE_TTL=3600
+ENABLE_EMBEDDING_CACHING=true
