--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,17 @@
-# Library Advisory System Requirements
-# Web Application with Azure OpenAI integration
+# Library Advisory System - Optimized Requirements
+# Essential dependencies only
 
 # Web Framework
-Flask>=2.3.0               # Web framework for Python
-Werkzeug>=2.3.0            # WSGI utility library
+Flask>=2.3.0               # Web framework
+Werkzeug>=2.3.0            # WSGI utility
 
 # Azure OpenAI integration
 openai>=1.12.0             # Azure OpenAI client
-python-dotenv>=1.0.0       # Environment variable management
-requests>=2.25.0           # HTTP requests for API calls
+python-dotenv>=1.0.0       # Environment variables
+requests>=2.25.0           # HTTP requests
 
-# Optional dependencies for enhanced functionality:
-colorama>=0.4.4            # For Windows color support
-rich>=10.0.0               # For enhanced terminal formatting (future enhancement)
+# Optional enhancements
+colorama>=0.4.4            # Windows color support
+rich>=10.0.0               # Enhanced terminal formatting
 
-# Core Python modules used:
-# - os
-# - sys
-# - json
-# - re
-# - datetime
-# - typing
-# - dataclasses
-# - argparse
+# Core modules: os, sys, json, re, datetime, typing, dataclasses, argparse, html
