--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,9 @@
 # Byte-compiled / optimized / DLL files
 __pycache__/
-*/__pycache__/
 *.py[cod]
 *$py.class
+
+# C extensions
 *.so
 
 # Distribution / packaging
@@ -19,7 +20,6 @@ parts/
 sdist/
 var/
 wheels/
-pip-wheel-metadata/
 share/python-wheels/
 *.egg-info/
 .installed.cfg
@@ -49,6 +49,7 @@ coverage.xml
 *.py,cover
 .hypothesis/
 .pytest_cache/
+cover/
 
 # Translations
 *.mo
@@ -71,6 +72,7 @@ instance/
 docs/_build/
 
 # PyBuilder
+.pybuilder/
 target/
 
 # Jupyter Notebook
@@ -81,7 +83,9 @@ profile_default/
 ipython_config.py
 
 # pyenv
-.python-version
+#   For a library or package, you might want to ignore these files since the code is
+#   intended to run in multiple environments; otherwise, check them in:
+# .python-version
 
 # pipenv
 #   According to pypa/pipenv#598, it is recommended to include Pipfile.lock in version control.
@@ -90,7 +94,22 @@ ipython_config.py
 #   install all needed dependencies.
 #Pipfile.lock
 
-# PEP 582; used by e.g. github.com/David-OConnor/pyflow
+# poetry
+#   Similar to Pipfile.lock, it is generally recommended to include poetry.lock in version control.
+#   This is especially recommended for binary packages to ensure reproducibility, and is more
+#   commonly ignored for libraries.
+#   https://python-poetry.org/docs/basic-usage/#commit-your-poetrylock-file-to-version-control
+#poetry.lock
+
+# pdm
+#   Similar to Pipfile.lock, it is generally recommended to include pdm.lock in version control.
+#pdm.lock
+#   pdm stores project-wide configurations in .pdm.toml, but it is recommended to not include it
+#   in version control.
+#   https://pdm.fming.dev/#use-with-ide
+.pdm.toml
+
+# PEP 582; used by e.g. github.com/David-OConnor/pyflow and github.com/pdm-project/pdm
 __pypackages__/
 
 # Celery stuff
@@ -108,8 +127,6 @@ venv/
 ENV/
 env.bak/
 venv.bak/
-*/.venv
-*/venv/
 
 # Spyder project settings
 .spyderproject
@@ -132,15 +149,24 @@ dmypy.json
 # pytype static type analyzer
 .pytype/
 
-# Cython debug symbols
-cython_debug/
+# Cov
+.coverage
 
-# VS Code
-.vscode/
-*.code-workspace
+# Application-specific
+data/
+*.db
+*.sqlite
+*.sqlite3
 
-# PyCharm
-.idea/
+# FAISS indices
+*.index
+*.pkl
+
+# Temporary files
+temp/
+tmp/
+*.tmp
+*.temp
 
 # OS generated files
 .DS_Store
@@ -151,7 +177,30 @@ cython_debug/
 ehthumbs.db
 Thumbs.db
 
-# Temporary files
-*.tmp
-*.temp
+# IDE files
+.vscode/
+.idea/
+*.swp
+*.swo
 *~
+
+# Logs
+logs/
+*.log
+
+# Uploaded projects
+uploads/
+
+# Node.js (if you add any Node tools)
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Windows specific
+*.bat
+desktop.ini
+
+# MacOS specific
+.AppleDouble
+.LSOverride
