--- a/.github/workflows/main_libraryadvisor.yml
+++ b/.github/workflows/main_libraryadvisor.yml
@@ -24,6 +24,10 @@ jobs:
         with:
           python-version: '3.9'
 
+      - name: CD to project directory
+        run: |
+          cd library-advisor
+
       - name: Create and start virtual environment
         run: |
           python -m venv venv
